--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <table cellspacing="30">
     <tr>
-      <td><img src="ak.png" alt="Profile pic"></td>
+      <td><img src="photo.png" alt="Profile pic"></td>
         <td><center>
           <hr size="3" noshade>
                <h1>My name is akash khondle<br> Now i pursuing B.tech in viit</h1>
